<resources>
    <string name="app_name">Duckr</string>
    <string name="tab_home">首页</string>
    <string name="tab_me">我</string>
    <string name="tab_char">消息</string>
    <string name="tab_local">位置</string>
    <string name="tab_tourpic">分享</string>
    <string name="textContent">这是一个见得黄的内容简单测试测试这是一个见得黄的内的内容简单测试测试这是一个见得黄的内的内容简单测试测试这是一个见得黄的内的内容简单测试测试这是一个见得黄的内的内容简单测试测试这是一个见得黄的内的内容简单测试测试这是一个见得黄的内的内容简单测试测试这是一个见得黄的内的内容简单测试测试这是一个见得黄的内的内容简单测试测试这是一个见得黄的内的内容简单测试测试这是一个见得黄的内的内容简单测试测试这是一个见得黄的内的内容简单测试测试这是一个见得黄的内的内容简单测试测试这是一个见得黄的内的内容简单测试测试这是一个见得黄的内的内容简单测试测试这是一个见得黄的内的内容简单测试测试这是一个见得黄的内的内容简单测试测试这是一个见得黄的内的内容简单测试测试这是一个见得黄的内的内容简单测试测试这是一个见得黄的内的内容简单测试测试这是一个见得黄的内的内容简单测试测试这是一个见得黄的内的内容简单测试测试这是一个见得黄的内的内容简单测试测试这是一个见得黄的内的内容简单测试测试这是一个见得黄的内的内容简单测试测试这是一个见得黄的内的内容简单测试测试这是一个见得黄的内的内容简单测试测试这是一个见得黄的内的内容简单测试测试这是一个见得黄的内的内容简单测试测试这是一个见得黄的的内容简单测试测试这是一个见得黄的内的内容简单测试测试这是一个见得黄的内的内容简单测试测试这是一个见得黄的内的内容简单测试测试这是一个见得黄的内的内容简单测试测试这是一个见得黄的内的内容简单测试测试这是一个见得黄的内的内容简单测试测试这是一个见得黄的内的内容简单测试测试这是一个见得黄的内的内容简单测试测试这是一个见得黄的内的内容简单测试测试这是一个见得黄的内的内容简单测试测试这是一个见得黄的内的内容简单测试测试这是一个见得黄的内的内容简单测试测试这是一个见得黄的内的内容简单测试测试这是一个见得黄的内的内容简单测试测试这是一个见得黄的内内的内容简单测试测试这是一个见得黄的内容简单测试测试这是一个见得黄的内容简单测试测试这是一个见得黄的内容简单测试测试这是一个见得黄的内容简单测试测试这是一个见得黄的内容简单测试测试这是一个见得黄的内容简单测试测试这是一个见得黄的内容简单测试测试这是一个见得黄的内容简单测试测试这是一个见得黄的内容简单测试测试这是一个见得黄的内容简单测试测试这是一个见得黄的内容简单测试测试这是一个见得黄的内容简单测试测试这是一个见得黄的内容简单测试测试这是一个见得黄的内容简单测试测试这是一个见得黄的内容简单测试测试这是一个见得黄的内容简单测试测试这是一个见得黄的内容简单测试测试这是一个见得黄的内容简单测试测试这是一个见得黄的内容简单测试测试这是一个见得黄的内容简单测试测试这是一个见得黄的内容简单测试测试这是一个见得黄的内容简单测试测试这是一个见得黄的内容简单测试测试这是一个见得黄的内容简单测试测试这是一个见得黄的内容简单测试测试这是一个见得黄的内容简单测试测试这是一个见得黄的内容简单测试测试这是一个见得黄的内容简单测试测试这是一个见得黄的内容简单测试测试这是一个见得黄的内容简单测试测试这是一个见得黄的内容简单测试测试这是一个见得黄的内容简单测试测试这是一个见得黄的内容简单测试测试这是一个见得黄的内容简单测试测试这是一个见得黄的内容简单测试测试这是一个见得黄的内容简单测试测试这是一个见得黄的内容简单测试测试这是一个见得黄的内容简单测试测试</string>

    <string name="title_activity_welcome">Duckr</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="company">北京百应连城科技有限公司</string>
    <string name="durk_com">©2016 duckr.com 保留所有权利</string>
</resources>
