<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cn.duckr.duckr.MainActivity">

    <LinearLayout
        android:id="@+id/mainFrag"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_above="@+id/btnGroup"
        android:layout_weight="10" />
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#e6eae3"/>
    <LinearLayout
        android:id="@+id/btnGroup"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:background="#fff"
        android:layout_weight="1">
        <LinearLayout
            android:id="@+id/tab_home_l"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingTop="7dp"
            android:onClick="onClick"
            android:paddingBottom="1dp"
            android:orientation="vertical"
            android:layout_weight="1">
            <ImageView
                android:id="@+id/tab_home"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/tab_home_focused"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:textSize="12sp"
                android:text="@string/tab_home"
                android:gravity="center"
                android:textColor="#7b7c7d"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/tab_tourpic_l"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingTop="7dp"
            android:onClick="onClick"
            android:paddingBottom="1dp"
            android:orientation="vertical"
            android:layout_weight="1">
            <ImageView
                android:id="@+id/tab_tourpic"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/tab_tourpic_normal"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:textSize="12sp"
                android:text="@string/tab_tourpic"
                android:gravity="center"
                android:textColor="#7b7c7d"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/tab_local_l"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingTop="7dp"
            android:onClick="onClick"
            android:paddingBottom="1dp"
            android:orientation="vertical"
            android:layout_weight="1">
            <ImageView
                android:id="@+id/tab_local"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/tab_local_normal"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:textSize="12sp"
                android:text="@string/tab_local"
                android:gravity="center"
                android:textColor="#7b7c7d"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/tab_chat_l"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:onClick="onClick"
            android:paddingTop="7dp"
            android:paddingBottom="1dp"
            android:orientation="vertical"
            android:layout_weight="1">
            <ImageView
                android:id="@+id/tab_chat"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/tab_chat_normal"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:textSize="12sp"
                android:text="@string/tab_char"
                android:gravity="center"
                android:textColor="#7b7c7d"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/tab_me_l"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:onClick="onClick"
            android:paddingTop="7dp"
            android:paddingBottom="1dp"
            android:orientation="vertical"
            android:layout_weight="1">
            <ImageView
                android:id="@+id/tab_me"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/tab_me_select"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:textSize="12sp"
                android:text="@string/tab_me"
                android:gravity="center"
                android:textColor="#7b7c7d"
                />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
